--- a/style/style.css
+++ b/style/style.css
@@ -53,6 +53,14 @@
     font-weight: 400;
 }
 
+/** глобальные параметры для всего документа */
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 /** стилизация шрифтов */
 
 .body {
