--- a/style/style.css
+++ b/style/style.css
@@ -61,11 +61,6 @@
     box-sizing: border-box;
 }
 
-.sizer {
-    max-width: 1065px;
-    margin: 0 auto;
-}
-
 /** стилизация шрифтов */
 
 .body {
@@ -150,6 +145,10 @@
     font-size: 40px;
 }
 
+.page {
+    max-width: 1440px;
+}
+
 /** стили для header */
 
 .header {
@@ -172,6 +171,10 @@
     background-size: cover;
     min-height: 630px;
     position: relative;
+    margin: auto;
+    margin-bottom: 135px;
+    max-width: 74%;
+
 }
 
 .hero__box {
