--- a/style/style.css
+++ b/style/style.css
@@ -169,7 +169,7 @@
     position: relative;
     margin: auto;
     margin-bottom: 135px;
-    max-width: 74%;
+    max-width: 1065px;
 }
 
 .hero__box {
@@ -182,5 +182,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     padding-top: 110px;
+    padding-left: 20px;
     padding-bottom: 110px;
+    padding-right: 20px;
 }
