bug fi[ after review

--- a/style/style.css
+++ b/style/style.css
@@ -101,7 +101,7 @@
     font-weight: 700;
 }
 
-.testimonials__content {
+.testimonials__description {
     font-family: "Bitter", serif;
     font-size: 32px;
 }
