--- a/style/style.css
+++ b/style/style.css
@@ -119,7 +119,7 @@
     font-size: 16px;
 }
 
-.testimonials__content {
+.testimonials__quote {
     font-family: "Bitter", serif;
     font-size: 32px;
 }
@@ -197,13 +197,55 @@
 }
 
 .testimonials{
-    max-width: 813px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 56px 1fr;
+    max-width: 1180px;
+    margin:auto;
     margin-bottom: 134px;
-    
 }
+
+.testimonials__title {
+    margin-bottom: 33px;
+}
+
+.testimonials__content {
+    display: grid;
+    grid-template-columns: 6% 44% 50%;
+}
+.testimonials__links {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: flex-end;
+    margin-bottom: 15px;
+    gap: 190px;
+   
+}
+
+.testimonials__link {
+    display: block;
+    max-width: 186px;
+    text-decoration: none;
+    color: black;
+    transform: rotate(-90deg);
+    transform-origin: top left;
+}
+
+.testimonials__link:hover {
+    opacity: 0.8;
+    transition: opacity .5s ease;
+}
+
+.testimonials__mission {
+    align-self: center;
+    justify-self: center;
+}
+
+.testimonials__quote {
+    max-width: 221px;
+    text-align: center;
+    margin-bottom: 42px;
+}
+
+
 .testimonials__image_size_large{
     max-width: 515px;
 }
