--- a/style/style.css
+++ b/style/style.css
@@ -98,6 +98,12 @@
   padding-top: 60px;
 }
 
+@media screen and (max-width: 768px) {
+  .header {
+    display: none;
+  }
+}
+
 .header__menu {
   max-width: 34px;
   max-height: 15px;
@@ -105,12 +111,60 @@
   background: transparent;
 }
 
+@media screen and (max-width: 768px) {
+  .header__menu {
+    display: none;
+  }
+}
+
 /** стили для hero-section */
+
+.hero {
+  position: relative;
+  margin: auto;
+  margin-bottom: 149px;
+  max-width: 1065px;
+  background-image: url(../images/header.jpg);
+  background-size: cover;
+  min-height: 630px;
+}
+
+@media screen and (max-width: 990px) {
+  .hero {
+    max-width: 770px;
+    margin-bottom: 100px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .hero {
+    max-width: 450px;
+    max-height: 420px;
+    background-image: url(../images/header_mobile.jpg);
+    min-height: 764px;
+    margin-bottom: 80px;
+  }
+}
 
 .hero__title {
   font-family: "Playfair Display", serif;
   font-size: 86px;
   font-weight: 500;
+  margin-bottom: 15px;
+}
+
+@media screen and (max-width: 990px) {
+  .hero__title {
+    font-size: 75px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .hero__title {
+    font-size: 70px;
+    font-weight: 400;
+    margin-bottom: 15px;
+  }
 }
 
 .hero__subtitle {
@@ -118,26 +172,39 @@
   font-weight: 500;
 }
 
-.hero {
-  background-image: url(../images/header.jpg);
-  background-size: cover;
-  min-height: 630px;
-  position: relative;
-  margin: auto;
-  margin-bottom: 135px;
-  max-width: 1065px;
+@media screen and (max-width: 768px) {
+  .hero__subtitle {
+    font-size: 18px;
+  }
 }
 
 .hero__box {
   background-color: #fff;
-  width: 56%;
-  min-height: 360px;
   text-align: center;
   position: absolute;
+  width: 56%;
+  min-height: 360px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 110px 20px 110px 20px;
+}
+
+@media screen and (max-width: 990px) {
+  .hero__box {
+    width: 70%;
+    min-height: 280px;
+    padding: 80px 20px 80px 20px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .hero__box {
+    width: 100%;
+    min-height: 344px;
+    top: 22.5%;
+    padding: 110px 20px 110px 20px;
+  }
 }
 
 /** стили для biography-section */
@@ -150,7 +217,13 @@
   justify-content: flex-start;
   max-width: 1175px;
   max-height: 840px;
-  margin: 0px auto 135px;
+  margin: 0px auto 145px;
+}
+
+@media screen and (max-width: 990px) {
+  .biography {
+    flex-direction: column;
+  }
 }
 
 .biography__title {
@@ -177,6 +250,7 @@
   font-family: "Bitter", serif;
   font-size: 26px;
   max-width: 449px;
+  color: #0d0d0d;
 }
 
 .biography__description::before {
@@ -184,14 +258,11 @@
   content: "";
   width: 14px;
   height: 4px;
-  background-color: black;
+  background-color: #000000;
   margin-bottom: 17px;
 }
 
 .biography__image {
-  max-width: 47%;
-  max-height: 840px;
-  max-width: 47%;
   max-height: 840px;
 }
 
@@ -200,30 +271,72 @@
   min-height: 507px;
   align-self: center;
   margin-left: 91px;
+  margin-right: 20px;
 }
 
 .biography__job {
-  margin-bottom: 65px;
   font-size: 18px;
   font-weight: 500;
+  color: #0d0d0d;
 }
 
+.biography__position {
+  font-size: 18px;
+  font-weight: 500;
+  color: #0d0d0d;
+}
 /** стили для designers-section */
 
 .designers {
+  position: relative;
   overflow: auto;
   margin-left: 73px;
-  margin-bottom: 258px;
+  margin-bottom: 150px;
   min-height: 660px;
+}
+
+@media screen and (max-width: 990px) {
+  .designers {
+    margin-left: 30px;
+    margin-bottom: 100px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .designers {
+    margin-left: 18px;
+    min-height: 573px;
+    margin-bottom: 80px;
+    padding-top: 52px;
+  }
 }
 
 .designers__title {
   display: inline-block;
+  position: absolute;
+  top: -20px;
+  left: 55%;
   max-width: 91px;
   transform: rotate(-90deg);
   transform-origin: right bottom;
   font-size: 20px;
   font-weight: 700;
+}
+
+@media screen and (max-width: 1100px) {
+  .designers__title {
+    left: 580px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .designers__title {
+    transform: none;
+    top: 0px;
+    left: 0px;
+    font-size: 18px;
+    margin-bottom: 32px;
+  }
 }
 
 .designers__line {
@@ -233,6 +346,13 @@
   min-height: 619px;
   gap: 30px;
   align-items: flex-end;
+}
+
+@media screen and (max-width: 768px) {
+  .designers__line {
+    gap: 21px;
+    min-height: 520px;
+  }
 }
 
 .designers__item {
@@ -281,9 +401,23 @@
 /** стили для testimonials-section */
 
 .testimonials {
+  display: flex;
+  flex-direction: column;
   max-width: 1180px;
   margin: auto;
   margin-bottom: 134px;
+}
+
+@media screen and (max-width: 990px) {
+  .testimonials {
+    max-width: 770px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .testimonials {
+    max-width: 450px;
+  }
 }
 
 .testimonials__title {
@@ -292,9 +426,26 @@
   margin-bottom: 33px;
 }
 
+@media screen and (max-width: 768px) {
+  .testimonials__title {
+    align-self: flex-end;
+    margin-right: 18px;
+    max-width: 450px;
+    margin-bottom: 28px;
+  }
+}
+
 .testimonials__content {
   display: grid;
   grid-template-columns: 6% 44% 50%;
+}
+
+@media screen and (max-width: 990px) {
+  .testimonials__content {
+    display: flex;
+    flex-direction: column;
+    gap: 28px;
+  }
 }
 
 .testimonials__links {
@@ -306,6 +457,22 @@
   gap: 190px;
 }
 
+@media screen and (max-width: 990px) {
+  .testimonials__links {
+    max-width: 770px;
+    gap: 20px;
+    justify-content: center;
+    order: 2;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .testimonials__links {
+    max-width: 450px;
+    justify-content: flex-start;
+  }
+}
+
 .testimonials__link {
   display: inline-block;
   max-width: 186px;
@@ -314,6 +481,14 @@
   transform: rotate(-90deg);
   transform-origin: top left;
   font-size: 16px;
+}
+
+@media screen and (max-width: 990px) {
+  .testimonials__link {
+    display: block;
+    max-width: 186px;
+    transform: none;
+  }
 }
 
 .testimonials__link:hover {
@@ -334,8 +509,20 @@
   font-size: 32px;
 }
 
+@media screen and (max-width: 990px) {
+  .testimonials__quote {
+    max-width: 342px;
+  }
+}
+
 .testimonials__image_size_large {
   max-width: 515px;
+}
+
+@media screen and (max-width: 990px) {
+  .testimonials__image_size_large {
+    display: none;
+  }
 }
 
 .testimonials__subtitle {
